# VIPS

./: .gitignore  .gitmodules  LICENSE  README.md
c++/: CMakeLists.txt  GMM.cpp  GMM.h  MMD.cpp  MMD.h  MMD.i  More.cpp  More.h  Reps.cpp  Reps.h  SampleDatabase.cpp  SampleDatabase.h  Utils.cpp  Utils.h  VIPS.cpp  VIPS.h  VIPS_Model.cpp  VIPS_Model.h  VIPS_PythonWrapper.cpp  VIPS_PythonWrapper.h  VIPS_PythonWrapper.i  doxygen.cfg
data/: data_ops.py  extract_relevant_data.py
data/datasets/: ionosphere.data
data/evaluation/: compute_mmd.py  compute_mmd_targetGMM.py  evaluate_10link.py  evaluate_frisk.py  evaluate_gmm.py  process_logs.py  visualize_results.py
data/groundtruth/: iono_samples_gess_small.npz  samples_frisk_10k.npy
doc/html/: GMM_8h_source.html  MMD_8h_source.html  More_8h_source.html  Reps_8h_source.html  SampleDatabase_8h_source.html  Utils_8h_source.html  VIPS_8h_source.html  VIPS__Model_8h_source.html  VIPS__PythonWrapper_8h_source.html  annotated.html  classGMM-members.html  classGMM.html  classGMM__inherit__graph.map  classGMM__inherit__graph.md5  classMMD-members.html  classMMD.html  classMMD_1_1MMD-members.html  classMMD_1_1MMD.html  classMMD_1_1MMD__coll__graph.map  classMMD_1_1MMD__inherit__graph.md5  classMMD_1_1__object.html  classMMD_1_1__object__inherit__graph.map  classMMD_1_1__object__inherit__graph.md5  classMore-members.html  classMore.html  classReps-members.html  classReps.html  classSampleDatabase-members.html  classSampleDatabase.html  classVIPS-members.html  classVIPS.html  classVIPS__Model-members.html  classVIPS__Model.html  classVIPS__Model__coll__graph.map  classVIPS__Model__inherit__graph.md5  classVIPS__PythonWrapper-members.html  classVIPS__PythonWrapper.html  classVIPS__PythonWrapper_1_1VIPS__PythonWrapper-members.html  classVIPS__PythonWrapper_1_1VIPS__PythonWrapper.html  classVIPS__PythonWrapper_1_1VIPS__PythonWrapper__inherit__graph.map  (+58 more)
doc/latex/: annotated.tex  classGMM.tex  classGMM__inherit__graph.md5  classMMD.tex  classMMD_1_1MMD.tex  classMMD_1_1MMD__inherit__graph.md5  classMMD_1_1__object.tex  classMMD_1_1__object__inherit__graph.md5  classMore.tex  classReps.tex  classSampleDatabase.tex  classVIPS.tex  classVIPS__Model.tex  classVIPS__Model__coll__graph.md5  classVIPS__PythonWrapper.tex  classVIPS__PythonWrapper_1_1VIPS__PythonWrapper.tex  (+26 more)
python/: inspect_1d_cluster_results.py
(+245 files in other folders)
